<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EdtarInformacion">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">


        <ImageButton
            android:id="@+id/IbRegresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_titulo_edit"
            android:text="@string/Txt_titulo_edit"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_alignParentBottom="true"
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </RelativeLayout>

    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/perfilRL"
                android:layout_centerHorizontal="true"
                android:layout_width="120dp"
                android:layout_height="120dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_perfil"
                    android:src="@drawable/ic_img_perfil"
                    android:scaleType="centerCrop"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>

                <ImageView
                    android:id="@+id/IvEditarImg"
                    android:src="@drawable/icono_editar"
                    android:layout_alignParentEnd="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILNombres"
                android:layout_below="@+id/perfilRL"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_Nombres"
                    android:hint="@string/et_Nombres"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_actualizar"
                android:text="@string/btn_actualizar"
                android:textAllCaps="true"
                android:layout_below="@id/TILNombres"
                android:layout_marginTop="10dp"
                app:cornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>